# podcast-tui

./: .gitattributes  .gitignore  AGENTS.md  BUILD_COMMANDS.md  BUILD_SYSTEM_FINAL.md  BULK_DELETION_FEATURE.md  CHANGELOG.md  CLEANUP_PROGRESS.md  COLON_KEYBINDING_FIX.md  COMPLETION_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  GIT_COMMIT_INFO.md  IMPLEMENTATION_COMPLETE.md  ISSUE_FIXES_SUMMARY.md  MVP_SUMMARY.md  NEXT_STEPS.md  OPML_BUG_FIX_COMPLETE.md  OPML_FEATURE_COMPLETE.md  PHASE3_PROGRESS.md  PROJECT_CLEANUP_COMPLETE.md  QUICKSTART.md  README.md  RSS_IMPROVEMENTS.md  UNSUBSCRIBE_CLEANUP_FEATURE.md  WINDOWS_BUILD_COMPLETE.md  WINDOWS_BUILD_FIX.md  build.rs  clear_and_reparse.sh  debug_data.sh  debug_enclosures.rs  debug_feed_structure.rs  debug_keys.rs  debug_rss_test.sh  demo.sh  demo_completion.sh  flake.nix  run.sh  test_app.sh  (+12 more)
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  sprint_task.yml
.github/agents/: code-reviewer.agent.md  docs-writer.agent.md  test-writer.agent.md
.github/instructions/: markdown-docs.instructions.md  rust-code.instructions.md  tests.instructions.md  ui-buffers.instructions.md
.github/skills/: create-adr.md  create-rfc.md
.github/workflows/: post-release-version-sync.yml  release.yml
assets/: README.md
assets/icons/: regenerate-icons.sh
assets/linux/: podcast-tui.desktop
assets/themes/: catppuccin-mocha.toml  dracula.toml  gruvbox-dark.toml  nord.toml  tokyo-night.toml
docs/: ARCHITECTURE.md  BUGFIX_OPML_URL_HANDLING.md  BUILD_SYSTEM.md  BUILD_SYSTEM_SUMMARY.md  CODE_SIGNING.md  EMACS_KEYBINDINGS.md  FEATURE-OPML.md  GITHUB_ACTIONS_CODE_SIGNING_SETUP.md  IMPLEMENTATION_PLAN.md  KEYBINDINGS.md  NIX_PACKAGING.md  OPML_IMPLEMENTATION_SUMMARY.md  OPML_REAL_WORLD_FIX_SUMMARY.md  OPML_SUPPORT.md  PRD.md  PROJECT_CLEANUP.md  SEARCH_AND_FILTER.md  STORAGE_DESIGN.md  TESTING.md  TESTING_OPML_URL_FIX.md  WINDOWS_SMARTSCREEN_WARNING.md  WINGET_PUBLISHING.md
docs/adr/: ADR-001-storage-abstraction.md  ADR-002-buffer-based-ui.md  ADR-003-metadata-device-sync.md  ADR-004-nix-packaging.md  README.md
docs/archive/: README.md
docs/inprogress/: CODE_SIGNING_IMPLEMENTATION.md
examples/: sample-subscriptions.opml
scripts/: INSTALL-LLVM.md  INSTALL-MSVC-TOOLS.md  README-WINDOWS.md  README.md  build-linux.sh  build-releases-windows.ps1  build-releases.sh  build-windows.ps1  install-build-deps.ps1  install-build-deps.sh  install-icon-linux.sh  sign-windows-binary.ps1  test-build.sh
src/: app.rs  config.rs  constants.rs  lib.rs  main.rs  test_keys.rs
src/audio/: external.rs  (+3 more)
tests/: test_audio.rs  test_episode_detail_feeds.rs  test_mark_played.rs  test_opml_live_url.rs  test_opml_local_file.rs  test_playlist.rs  test_sync_commands.rs  unsubscribe_integration_test.rs
(+103 files in other folders)
